--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
 	<title>Svelte app</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel='stylesheet' href='/build/style.css'>
 
 	<script defer src='/build/bundle.js'></script>
 </head>
