Feature: Add GitHub Calendar

--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta property="og:title" content="Shinyaigeek'sGitHub Activity" />
+    <meta property="og:site_name" content="shinyaigeek.dev" />
+    <meta property="og:locale" content="ja_JP" />
+    <meta name="description" content="Shinyaigeek's GitHub Activity" />
+    <meta property="og:description" content="Shinyaigeek's GitHub Activity" />
+    <meta
+      property="og:url"
+      content="https://github-activity.shinyaigeek.dev/"
+    />
+    <meta name="twitter:site" content="@shinyaigeek" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      property="og:image"
+      content="$https://shinyaigeek-og-image.vercel.app/api/?title=shinyaigeek.dev"
+    />
+    <meta
+      name="twitter:image"
+      content="$https://shinyaigeek-og-image.vercel.app/api/?title=shinyaigeek.dev"
+    />
 
-	<title>Svelte app</title>
+    <title>Shinyaigeek's GitHub Activity</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/build/style.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+    <link rel="stylesheet" href="/build/style.css" />
+    <link rel="stylesheet" href="/build/bundle.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://shinyaigeek.dev/assets/static/favicon.ico"
+    />
+  </head>
 
-	<script defer src='/build/bundle.js'></script>
-</head>
+  <body></body>
 
-<body>
-</body>
+  <script async defer src="/build/bundle.js"></script>
+  <script async defer src="https://cdn.jsdelivr.net/npm/github-calendar-element@1.0.0/lib/main.js" ></script>
 </html>
