--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       property="og:image"
-      content="$https://shinyaigeek-og-image.vercel.app/api/?title=shinyaigeek.dev"
+      content="https://shinyaigeek-og-image.vercel.app/api/?title=shinyaigeek.dev"
     />
     <meta
       name="twitter:image"
-      content="$https://shinyaigeek-og-image.vercel.app/api/?title=shinyaigeek.dev"
+      content="https://shinyaigeek-og-image.vercel.app/api/?title=shinyaigeek.dev"
     />
 
     <title>Shinyaigeek's GitHub Activity</title>
